# dunelegacyfork-2022

./: CMakeLists.txt  ChangeLog  DuneLegacy-0.98.4-Setup.nsi  README  copy_mingw_dlls.ps1  create_dmg.sh
IDE/VC/: DuneLegacy.vcxproj  DuneLegacy.vcxproj.filters  packages.config
IDE/xCode/: Info.plist
IDE/xCode/Dune Legacy.xcodeproj/: project.pbxproj
IDE/xCode/Dune Legacy.xcodeproj/xcshareddata/xcschemes/: Dune Legacy.xcscheme
include/: Definitions.h  Game.h  House.h  SpatialGrid.h  config.h  globals.h
include/misc/: format.h
include/players/: QuantBot.h
nsis/: DuneLegacySetup.nsi  dunelegacy.nsi  dunelegacy_mingw.nsi  dunelegacy_vs.nsi
sourceforge_website/: downloads.html  feed.xml  index.html  news.html
src/: CMakeLists.txt  CursorManager.cpp  Game.cpp  House.cpp  ObjectBase.cpp  SpatialGrid.cpp  main.cpp
src/FileClasses/: GFXManager.cpp
src/GUI/dune/: BuilderList.cpp
src/MapEditor/: MapEditor.cpp
src/Menu/: MenuBase.cpp  MultiPlayerMenu.cpp  OptionsMenu.cpp
src/Network/: LANGameFinderAndAnnouncer.cpp
src/enet/: unix.c
src/misc/: FileSystem.cpp
src/players/: CampaignAIPlayer.cpp  PlayerFactory.cpp  QuantBot.cpp
src/units/: SandWorm.cpp  UnitBase.cpp
tests/: CMakeLists.txt
